--- a/src/assets/styles/themes/snek.less
+++ b/src/assets/styles/themes/snek.less
@@ -3,9 +3,9 @@
 @import '~@ergolabs/ui-kit/dist/styles/variables.light';
 
 .snek {
-  @snek-primary-color: #00e1ff;
-  @snek-primary-color-hover: #10e1ff;
-  @snek-secondary-color: #a81fb8;
+  @snek-primary-color: #39404D;
+  @snek-primary-color-hover: #39404D;
+  @snek-secondary-color: #1D2332;
 
   @snek-box-shadow: 6px 6px 0 @snek-secondary-color;
   @snek-box-shadow-small: 4px 4px 0 @snek-secondary-color;
@@ -19,7 +19,7 @@
   --spectrum-primary-color-active: @snek-primary-color;
 
   --spectrum-connect-wallet-btn-color: @snek-secondary-color !important;
-  --spectrum-connect-wallet-btn-bg: rgba(0, 255, 255, 0.5);
+  --spectrum-connect-wallet-btn-bg: #39404D;
   --spectrum-connect-wallet-btn-border: transparent;
 
   --spectrum-box-bg-contrast: #d2d2d2;
