--- a/src/assets/styles/themes/snek.less
+++ b/src/assets/styles/themes/snek.less
@@ -3,15 +3,14 @@
 @import '~@ergolabs/ui-kit/dist/styles/variables.light';
 
 .snek {
-  @snek-primary-color: #39404D;
-  @snek-primary-color-hover: #39404D;
+  @snek-primary-color: #9CACC8;
+  @snek-primary-color-hover: #9CACC8;
   @snek-secondary-color: #1D2332;
 
   @snek-box-shadow: 6px 6px 0 @snek-secondary-color;
   @snek-box-shadow-small: 4px 4px 0 @snek-secondary-color;
 
   .lightTheme();
-  --spectrum-glow-image: url("../../images/snek-glow.png");
   --spectrum-glow-image-width: 100%;
 
   --spectrum-primary-color: @snek-primary-color;
@@ -29,7 +28,7 @@
   --spectrum-claim-spf-box-background: var(--spectrum-box-bg);
 
   .ant-progress-bg {
-    background: linear-gradient(264.34deg, @snek-primary-color 2.83%, @snek-secondary-color 98.67%);
+    background: linear-gradient(264.34deg, @snek-secondary-color 98.67%);
   }
 
   .ant-btn.ant-btn-primary,
